--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Tejaswini M</h1>
-            <h2>Open for any work related to Python/Data Analytics/Data Science</h2>
+            <h1>Dheeraj V</h1>
+            <h2>Data Engineer|Data Addict|Python|Data Analytics|Data Science</h2>
             <a href="https://github.com/reachteja/reachteja.github.io/raw/master/Tejaswini_Resume.docx" download="Tejaswini_Resume.docx" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,18 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am Tejaswini.I am fulltime Freelancer having expertise in Python, Data Analytics and Data Science. I teach, support with your job/projects,
-			Well versed in statistical techniques and methods including Linear/Ridge/Lasso regression, Logistic regression, KSVM, Decision Tree, Random Forest, Gradient Boosting Decision Tree, Neural Networks(MLP, ANN, RNN), Time Series Analysis(ARMA/ARIMA), Unsupervised algorithms.
-Skilled in statistical software and development tools like R Studio, Python (PyCharm/Anaconda), Tableau.
+                       I am Dheeraj.have nearly 7 years of experience in "torturing" data to extract business insights.
+			    My Tech stack:- </br>
+			    ETL tools like Informatica, Talend</br>
+			    Databases: Oracle, Postgre,HBase</br>
+			    Query languages: SQL, NoSQL</br>
+			    Scripting: Unix, Python</br>
+	Visualisation: Tableau, matplotlib(Python Library) </br>
+	Data Analysis: Pandas,NumPy,matplotlib etc.,. </br>
+IDE's: Anaconda,Jupyter,Spyder </br>
+			    Data Science: Supervised(Linear regression,Logistic regression,KNN) </br>
+unsupervised(Clustering)
+.
 			 I am passionate about Data Science and love producing data-driven business insights. I always look for challenging opportunities for my personal as well as professional growth.   
                     </p>
                 </div>
