--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Dheeraj V</h1>
+            <h1>Dheeraj Kumar</h1>
             <h2>Data Engineer|Data Addict|Python|Data Analytics|Data Science</h2>
             <a href="https://github.com/reachteja/reachteja.github.io/raw/master/Tejaswini_Resume.docx" download="Tejaswini_Resume.docx" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -73,15 +73,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       I am Dheeraj.have nearly 7 years of experience in "torturing" data to extract business insights.
+                       I have nearly 7 years of experience in "torturing" data to extract business insights.</br>
 			    My Tech stack:- </br>
-			    ETL tools like Informatica, Talend</br>
-			    Databases: Oracle, Postgre,HBase</br>
-			    Query languages: SQL, NoSQL</br>
-			    Scripting: Unix, Python</br>
-	Visualisation: Tableau, matplotlib(Python Library) </br>
-	Data Analysis: Pandas,NumPy,matplotlib etc.,. </br>
-IDE's: Anaconda,Jupyter,Spyder </br>
+		<b>ETL tools:</b> Informatica, Talend</br>
+		<b>	    Databases:</b> Oracle, Postgre,HBase</br>
+		<b>	    Query languages:</b> SQL, NoSQL</br>
+		<b>	    Scripting:</b> Unix, Python</br>
+	<b>Visualisation:</b> Tableau, matplotlib(Python Library) </br>
+	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
+<b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
 			    Data Science: Supervised(Linear regression,Logistic regression,KNN) </br>
 unsupervised(Clustering)
 .
