--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Dheeraj Kumar</h1>
-            <h2>Data Engineer|Data Addict|Python|Data Analytics|Data Science</h2>
-            <a href="https://github.com/reachteja/reachteja.github.io/raw/master/Tejaswini_Resume.docx" download="Tejaswini_Resume.docx" class="btn-rounded-white">Download Resume</a>
+            <h2>Dheeraj Kumar</h2>
+		<h3>Data Engineer by Profession </br>
+		Data Addict by Passion |Python|Data Analytics|Data Science</h3>
+            <a href="https://github.com/reachteja/reachteja.github.io/raw/master/Dheeraj_Resume.docx" download="Dheeraj_Resume.docx" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -74,7 +75,7 @@
                 <div class="col-md-8">
                     <p>
                        I have nearly 7 years of experience in "torturing" data to extract business insights.</br>
-			    My Tech stack:- </br>
+		    <b>My Tech stack:-</b> </br>
 		<b>ETL tools:</b> Informatica, Talend</br>
 		<b>	    Databases:</b> Oracle, Postgre,HBase</br>
 		<b>	    Query languages:</b> SQL, NoSQL</br>
@@ -82,10 +83,10 @@
 	<b>Visualisation:</b> Tableau, matplotlib(Python Library) </br>
 	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
 <b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
-			    Data Science: Supervised(Linear regression,Logistic regression,KNN) </br>
-unsupervised(Clustering)
+<b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>
+								unsupervised(Clustering)
 .
-			 I am passionate about Data Science and love producing data-driven business insights. I always look for challenging opportunities for my personal as well as professional growth.   
+			 I am passionate about Data Science and love producing data-driven business insights.
                     </p>
                 </div>
             </div>
