--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
 <b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
 <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>
-								unsupervised(Clustering)
+&emsp; &emsp;	unsupervised(Clustering) </br>
 .
 			 I am passionate about Data Science and love producing data-driven business insights.
                     </p>
