--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
 <b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
 <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>
-&emsp; &emsp;	unsupervised(Clustering) </br>
-.
+&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;	unsupervised(Clustering) </br>
+
 			 I am passionate about Data Science and love producing data-driven business insights.
                     </p>
                 </div>
