--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h2>Dheeraj Kumar</h2>
-		<h3>Data Engineer by Profession </br>
-		Data Addict by Passion |Python|Data Analytics|Data Science</h3>
+            <h1>Dheeraj</h1>
+		<h2>Data Engineer by Profession </br>
+		Data Addict by Passion |Python|Data Analytics|Data Science</h2>
             <a href="https://github.com/reachteja/reachteja.github.io/raw/master/Dheeraj_Resume.docx" download="Dheeraj_Resume.docx" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -97,32 +97,20 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2019 – Present">
-                <h3>Full Time Freelancer</h3>
-                <h4>Python Dev or Automation Scripts/ Data Analyst/ Data Scientist</h4>
+            <div data-date="Jan 2020 – Present">
+                <h3>Data Engineer</h3>
+                <h4>PayPal</h4>
                 <p>
-                   With my prior working experiences, i have decided to work as full-time freelancer handling multiple clients with various business scenarios and working on challenging problem statements made me feel complete.
-		   i work remotely with engineers. I am very excited to work with people across the world. I am open for any roles related to Data Analytics,Python & Data Scientist.
-		   I also teach online & classroom for newbies, job seekers, Job support, proxy works, supporting project works etc. 					
+                   Learning in progress ...!					
                 </p>
             </div>
 
-            <div data-date="July 2017 – September 2019">
-                <h3>Part-time Freelancer</h3>
-                <h4>Data Analyst/Data Scientist </h4>
-                <p>
-                    Involved in product solutions for clients on complex business problems, working across model building, validation, evaluation, optimization & deployment.
-Have worked with top tier companies across globe.
-Has been using predictive modeling algorithms from domain of Data Mining (Regression, Decision Trees), machine learning (SVM, KNN, Naive bayes etc.), deep learning & AI (ANN, CNN, LSTM) to solve challenging business problems.
-I have contributed dynamically in areas of education, training, management, consultancy & personality development.
-                </p>
-            </div>
-
-            <div data-date="October 2013 - September 2019">
+            
+            <div data-date="Nov 2013 - Dec 2019">
                 <h3>Cognizant Technology Solutions</h3>
                 <h4>Programmer Analyst/Data Analyst </h4>
                 <p>
-                    Worked with Marketing Analytics team of a leading Insurance provider in US on various Descriptive and Predictive analysis like Lead Targeting, Predictive Modeling, Customer Segmentation and Automation.		
+			... </br> ...
                 </p>
             </div>
         </div>
@@ -132,11 +120,11 @@ I have contributed dynamically in areas of education, training, management, cons
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Amrita School Of Engineering</h3>
+            <h3>Sathyabama University</h3>
             <span class="education-date">2009 - 2013</span>
             <h4>Bachelor of Engineering</h4>
             <p>
-                Completed my bachelors in 2013 with 7.6 CGPA from India.
+                Completed my bachelors in 2013.
             </p>
         </div>
         <!-- End .education-block -->
@@ -156,20 +144,13 @@ I have contributed dynamically in areas of education, training, management, cons
             <li>Data Visualization</li>		
             <li>Python</li>
             <li>Pandas</li>
-            <li>Numpy</li>
-            <li>Matplotlib</li>
-            <li>Seaborn</li>
-            <li>Plotly</li>
-            <li>Scikit-Learn</li>
-	    <li>SQL</li>
-            <li>Natural Language Processing</li>
-            <li>NLP</li>
+            <li>SQL</li>
             <li>Text Analytics</li>
-            <li>dfply</li> 
-            <li>Exccel</li>
+            <li>Toad</li> 
+            <li>Excel</li>
             <li>Supervised Learning</li>
             <li>Unsupervised Learning</li>
-            <li>Machine Learning</li>
+            <li>Hadoop</li>
             <li>Data Analyst</li>
             <li>Data Analysis</li>
             <li>Data Scientist</li>
