--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li>
                 <a href="#education">Education</a>
             </li>
-            <!-- <li> -->
-                <!-- <a href="#projects">Projects</a> -->
-            <!-- </li> -->
+            <li>
+            <a href="#projects">Projects</a>
+            </li>
             <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -158,7 +158,12 @@
         </ul>
     </div>
     <!-- End #skills -->
+ <div id="projects">
+        <h2 class="projects">Projects</h2>
+	 
+	 <p><a href="https://www.w3schools.com/">Email-ID Breached or not?</a></p>
 
+    </div>
     	    
         <!-- End #contact-form -->
     </div> 
