--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
  <div id="projects">
         <h2 class="projects">Projects</h2>
 	 
-	 <p><a href="https://www.w3schools.com/">Email-ID Breached or not?</a></p>
+	 <p><a href="/projects">Email-ID Breached or not?</a></p>
 
     </div>
     	    
