--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,18 @@
 
 <iframe src="https://pwd-chkr-app1.herokuapp.com/" width="450" height="350">
 </iframe>
+<head>
+<meta charset="utf-8">
 
+<script>
+    function reloadPage(){
+        location.reload(true);
+    }
+</script>
+</head>
+<body>
+
+    <button type="button" onclick="reloadPage();">Click to check for another Email... </button>   
+</body> 
 </body>
 </html>
