--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
 
 
 <iframe src="https://pwd-chkr-app1.herokuapp.com/" width="450" height="350">
-</iframe>
+</iframe> <br>
 <head>
 <meta charset="utf-8">
 
