--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       I have nearly 7 years of experience in "torturing" data to extract business insights.</br>
+                       I have 7+ years of experience in "torturing" data to extract business insights.</br>
 		    <b>My Tech stack:-</b> </br>
 		<b>ETL tools:</b> Informatica, Talend</br>
 		<b>	    Databases:</b> Oracle, Postgre,HBase</br>
