--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1>Dheeraj</h1>
 		<h2>Data Engineer by Profession </br>
 		Data Addict by Passion |Python|Data Analytics|Data Science</h2>
-            <a href="https://github.com/reachteja/reachteja.github.io/raw/master/Dheeraj_Resume.docx" download="Dheeraj_Resume.docx" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/VempatyDheeraj/vempatydheeraj.github.io/raw/master/Dheeraj_Resume.docx" download="Dheeraj_Resume.docx" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -76,7 +76,7 @@
                     <p>
                        I have 7+ years of experience in "torturing" data to extract business insights.</br>
 		    <b>My Tech stack:-</b> </br>
-		<b>ETL tools:</b> Informatica, Talend</br>
+		<b>ETL tools:</b> Informatica, Talend, Dell Boomi</br>
 		<b>	    Databases:</b> Oracle, Postgre,HBase</br>
 		<b>	    Query languages:</b> SQL, NoSQL</br>
 		<b>	    Scripting:</b> Unix, Python</br>
@@ -86,7 +86,7 @@
 <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>
 &emsp; &emsp;&emsp; &emsp;&emsp; &emsp;	unsupervised(Clustering) </br>
 
-			 I am passionate about Data Science and love producing data-driven business insights.
+			 I am passionate about Data Analytics & Data Science and love producing data-driven business insights.
                     </p>
                 </div>
             </div>
