--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                        I have 7+ years of experience in "torturing" data to extract business insights.</br>
 		    <b>My Tech stack:-</b> </br>
 		<b>ETL tools:</b> Informatica, Talend, Dell Boomi</br>
-		<b>	    Databases:</b> Oracle, Postgre,HBase</br>
+		<b>	    Databases:</b> Oracle, Postgre, MySQL, HBase</br>
 		<b>	    Query languages:</b> SQL, NoSQL</br>
 		<b>	    Scripting:</b> Unix, Python</br>
-	<b>Visualisation:</b> Tableau, matplotlib(Python Library) </br>
+	<b>Visualisation:</b> Tableau, matplotlib(Python Library), Looker(GCP), </br>
 	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
 <b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
 <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>
