--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       I have 7+ years of experience in "torturing" data to extract business insights.</br>
+                       I have 12+ years of experience in working with Data. </br>
 		    <b>My Tech stack:-</b> </br>
 		<b>ETL tools:</b> Informatica, Talend, Dell Boomi</br>
-		<b>	    Databases:</b> Oracle, Postgre, MySQL, HBase</br>
+		<b>	    Databases:</b> Oracle,GCP BigQuery, Teradata, Postgre, MySQL, HBase</br>
 		<b>	    Query languages:</b> SQL, NoSQL</br>
 		<b>	    Scripting:</b> Unix, Python</br>
-	<b>Visualisation:</b> Tableau, matplotlib(Python Library), Looker(GCP), </br>
+	<b>Visualisation:</b> Looker(GCP), Tableau, matplotlib(Python Library), PowerBI</br>
 	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
 <b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
-<b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>
+ <!-- <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>  --> 
 &emsp; &emsp;&emsp; &emsp;&emsp; &emsp;	unsupervised(Clustering) </br>
 
-			 I am passionate about Data Analytics & Data Science and love producing data-driven business insights.
+			 I am passionate about Data Engineering & Data Analytics and love producing data-driven business insights.
                     </p>
                 </div>
             </div>
@@ -101,7 +101,13 @@
                 <h3>Data Engineer</h3>
                 <h4>PayPal</h4>
                 <p>
-                   Learning in progress ...!					
+                	* <b>People DatawareHouse</b> - Built Data solutions for People Analytics & Workforce Planning Teams. </br>
+			* <b></b>Learning DataMart</b> - Designed & built entire project. Pulling Data from External APIs from Linkedin, Udemy, Oreilly, Cornerstone & transforemed it to reprting layer
+		    		and enabled it for reporting to get Learning rate, ROT and many other KPIs.
+		    	* <b>OrgVue</b>
+		    	* <b></b>Tax DataMart</b>
+		    	* <b>Real Estate DataMart</b>
+		    	* <b>Market Insights Tool</b>
                 </p>
             </div>
 
