--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 	<b>Visualisation:</b> Looker(GCP), Tableau, matplotlib(Python Library), PowerBI</br>
 	<b>Data Analysis:</b> Pandas,NumPy,matplotlib etc.,. </br>
 <b>IDE's:</b> Anaconda,Jupyter,Spyder </br>
- <!-- <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>  --> 
-&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;	unsupervised(Clustering) </br>
+ <!-- <b>Data Science:</b> Supervised(Linear regression,Logistic regression,KNN) </br>  
+&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;	unsupervised(Clustering) -->  </br>
 
 			 I am passionate about Data Engineering & Data Analytics and love producing data-driven business insights.
                     </p>
@@ -102,12 +102,12 @@
                 <h4>PayPal</h4>
                 <p>
                 	* <b>People DatawareHouse</b> - Built Data solutions for People Analytics & Workforce Planning Teams. </br>
-			* <b></b>Learning DataMart</b> - Designed & built entire project. Pulling Data from External APIs from Linkedin, Udemy, Oreilly, Cornerstone & transforemed it to reprting layer
-		    		and enabled it for reporting to get Learning rate, ROT and many other KPIs.
-		    	* <b>OrgVue</b>
-		    	* <b></b>Tax DataMart</b>
-		    	* <b>Real Estate DataMart</b>
-		    	* <b>Market Insights Tool</b>
+			* <b></b>Learning DataMart</b> - Designed & built entire project. Pulling Data using APIs from Linkedin, Udemy, Oreilly, Cornerstone & transforemed it to reprting layer
+		    		and enabled it for reporting to get Learning rate, ROT and many other KPIs.</br>
+		    	* <b>OrgVue</b></br>
+		    	* <b></b>Tax DataMart</b></br>
+		    	* <b>Real Estate DataMart</b></br>
+		    	* <b>Market Insights Tool</b></br>
                 </p>
             </div>
 
