--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                 <h4>PayPal</h4>
                 <p>
                 	* <b>People DatawareHouse</b> - Built Data solutions for People Analytics & Workforce Planning Teams. </br>
-			* <b></b>Learning DataMart</b> - Designed & built entire project. Pulling Data using APIs from Linkedin, Udemy, Oreilly, Cornerstone & transforemed it to reprting layer
+			* <b>Learning DataMart</b> - Designed & built entire project. Pulling Data using APIs from Linkedin, Udemy, Oreilly, Cornerstone & transforemed it to reprting layer
 		    		and enabled it for reporting to get Learning rate, ROT and many other KPIs.</br>
 		    	* <b>OrgVue</b></br>
-		    	* <b></b>Tax DataMart</b></br>
+		    	* <b>Tax DataMart</b></br>
 		    	* <b>Real Estate DataMart</b></br>
 		    	* <b>Market Insights Tool</b></br>
                 </p>
