--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
                 <p>
                 	* <b>People DatawareHouse</b> - Built Data solutions for People Analytics & Workforce Planning Teams. </br>
 			* <b>Learning DataMart</b> - Designed & built entire project. Pulling Data using APIs from Linkedin, Udemy, Oreilly, Cornerstone & transforemed it to reprting layer
-		    		and enabled it for reporting to get Learning rate, ROT and many other KPIs.</br>
+		    		and enabled it for reporting to get Learning rate, ROI and other KPIs.</br>
 		    	* <b>OrgVue</b></br>
-		    	* <b>Tax DataMart</b></br>
-		    	* <b>Real Estate DataMart</b></br>
+		    	* <b>Tax DataMart</b>  New Datamart for Tax reporting (1099K, FATCA, CP2100, etc.,.) and other 
+compliance reporting.</br>
+		    	* <b>Real Estate DataMart</b> Built Mart for deriving insights on buildings/Space utilization, Post 
+Pandemic Hybrid Work Model Analytics</br>
 		    	* <b>Market Insights Tool</b></br>
                 </p>
             </div>
@@ -114,7 +116,7 @@
             
             <div data-date="Nov 2013 - Dec 2019">
                 <h3>Cognizant Technology Solutions</h3>
-                <h4>Programmer Analyst/Data Analyst </h4>
+                <h4>ETL Developer/Programmer Analyst</h4>
                 <p>
 			... </br> ...
                 </p>
