--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       font-size: 1.5em;
       font-weight: 400;
       color: #ffffff;
-      animation: fadeIn 3s infinite alternate;
       margin-top: 10px;
     }
 
@@ -112,13 +111,7 @@
       padding: 10px;
       background-color: #e3e3e3;
     }
-.gradient {
-  background: linear-gradient(90deg, #4285F4, #34A853);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-fill-color: transparent;
-}
+
 
   </style>
 </head>
@@ -127,8 +120,8 @@
   <header>
     <div class="header-text">
       <h1>Dheeraj Vempaty</h1>
-      <p>Senior Data Engineer | Cloud Solutions | BI Automation</p>
-<p class="animated-tagline gradient">Data Engineer by Profession, Data Addict by Passion</p>
+      <p><b></b>Senior Data Engineer | Cloud Solutions | BI Automation</b></p>
+<p class="animated-tagline">Data Engineer by Profession, Data Addict by Passion</p>
 
     </div>
     <div class="logos">
@@ -174,12 +167,12 @@
     <div class="card">
       <h3>PayPal Inc. – Chennai<br><small>Senior Data Engineer | Jan 2020 – Present</small></h3>
       <ul>
-        <li><strong>Market Insights Tool:</strong> Self-service Looker dashboards for global financial analytics (~80TB daily refresh).</li>
-        <li><strong>LLM-Powered Finance Assistant:</strong> Internal AI bot using OpenAI models, integrated with Looker Extensions, saved 3+ hours/analyst/week.</li>
+        <li><strong>Market Insights Tool:</strong> Self-service Looker dashboards for global financial analytics (<b>~80TB</b> daily refresh).</li>
+        <li><strong>LLM-Powered Finance Assistant:</strong> Internal AI bot using OpenAI models, integrated with Looker Extensions, saved <b>3+ hours/analyst/week.</b</li>
         <li><strong>Learning DataMart:</strong> Unified L&D analytics via Airflow and vendor APIs (Udemy, LinkedIn, O'Reilly).</li>
-        <li><strong>Real Estate DataMart:</strong> Enabled hybrid workspace planning, saving ~$20M in vendor costs.</li>
+        <li><strong>Real Estate DataMart:</strong> Enabled hybrid workspace planning, saving <b>~$20M</b> in vendor costs.</li>
         <li><strong>People DataWarehouse:</strong> Central source for HR metrics, enhanced hybrid classification and analytics.</li>
-        <li><strong>Tax DataMart:</strong> Migrated 15TB+ legacy data to GCP, automated 1099K, CP2100 processing across platforms.</li>
+        <li><strong>Tax DataMart:</strong> Migrated <b>15TB+</b> legacy data to GCP, automated 1099K, CP2100 processing across platforms.</li>
       </ul>
     </div>
 
@@ -197,9 +190,9 @@
     <h2>Education</h2>
     <div class="card">
       <ul>
-        <li><strong>Sathyabama University, Chennai:</strong> B.E in Electronics & Instrumentation (75%)</li>
-        <li><strong>Sri Vivekananda Jr College, Vijayawada:</strong> Intermediate (87%)</li>
-        <li><strong>City Central High School, Kodad:</strong> SSC (90%)</li>
+        <li><strong>Sathyabama University, Chennai:</strong> B.E in Electronics & Instrumentation <b>75%)</b>(</li>
+        <li><strong>Sri Vivekananda Jr College, Vijayawada:</strong> Intermediate <b>(87%)</b></li>
+        <li><strong>City Central High School, Kodad:</strong> SSC <b>(90%)</b></li>
       </ul>
     </div>
   </section>
