--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <h3>PayPal Inc. – Chennai<br><small>Senior Data Engineer | Jan 2020 – Present</small></h3>
       <ul>
         <li><strong>Market Insights Tool:</strong> Self-service Looker dashboards for global financial analytics (<b>~80TB</b> daily refresh).</li>
-        <li><strong>LLM-Powered Finance Assistant:</strong> Internal AI bot using OpenAI models, integrated with Looker Extensions, saved <b>3+ hours/analyst/week.</b</li>
+        <li><strong>LLM-Powered Finance Assistant:</strong> Internal AI bot using OpenAI models, integrated with Looker Extensions, saved <b>3+ hours/analyst/week.</b></li>
         <li><strong>Learning DataMart:</strong> Unified L&D analytics via Airflow and vendor APIs (Udemy, LinkedIn, O'Reilly).</li>
         <li><strong>Real Estate DataMart:</strong> Enabled hybrid workspace planning, saving <b>~$20M</b> in vendor costs.</li>
         <li><strong>People DataWarehouse:</strong> Central source for HR metrics, enhanced hybrid classification and analytics.</li>
