--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <h2>Education</h2>
     <div class="card">
       <ul>
-        <li><strong>Sathyabama University, Chennai:</strong> B.E in Electronics & Instrumentation <b>75%)</b>(</li>
+        <li><strong>Sathyabama University, Chennai:</strong> B.E in Electronics & Instrumentation <b>(75%)</b></li>
         <li><strong>Sri Vivekananda Jr College, Vijayawada:</strong> Intermediate <b>(87%)</b></li>
         <li><strong>City Central High School, Kodad:</strong> SSC <b>(90%)</b></li>
       </ul>
